# chat-mvp

./: .env.sample  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-backend.txt  requirements.txt
backend/: __init__.py  main.py  prompts.py  rag.py  retrieve.py
corpus/: db.py  embed.py  embeddings.py  postgres_chat_message_history.py  schema.py  sql_queries.py  test_db.py  test_ingest.py
corpus/ingest/: chunking.py  crawl.py  github_readme.py  sources.py
database/: db.py  env_loader.py  postgres_chat_message_history.py  schema.py  sql_queries.py  test_db.py  test_ingest.py
database/ingest/: chunking.py  crawl.py  github_readme.py
docs/: architecture-overview.md  database-erd.md  ingestion-pipeline.md  rag-query-flow.md
evaluations/: 01-RAG-evaluation-metrics.py  02-custom-evaluation-metrics.py  03-a-b-testing-framework.py  04-cost-optimization.py  05-production-monitoring.py  howToA-B.py  howToUse.py  monitorProduction.py  run-evaluations.py  run-report.txt
evaluations/lib/: baseline-scores.json  baseline.py  harness.py  reference_cases.json
frontend/: app.py  requirements.txt
utils/: env_loader.py
