[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chat-mvp"
version = "0.3.0"
requires-python = ">=3.13"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "corpus*", "utils*"]

[tool.ruff]
target-version = "py313"
line-length = 88
src = ["backend", "corpus", "frontend", "utils"]
extend-exclude = ["evaluations"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
